<resources>
    <string name="app_name" translatable="false">Pocket RSS</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="option_open">Open in browser</string>
    <string name="channel_address">Channel address</string>
    <string name="channel_name">Channel name</string>
    <string name="source_category">Channel category</string>
    <string name="source_add">Add</string>
    <string name="source_empty_values">All fields shouldn\'t be empty</string>
    <string name="source_invalid_url">Channel link is invalid</string>
    <string name="source_invalid_source">Url is invalid rss channel</string>
    <string name="action_clear">Clear</string>
    <string name="notification_text">%d new news</string>
    <string name="prefs_dark_theme_label">Use dark theme</string>
    <string name="prefs_browser_label">Use in-app browser</string>
    <string name="prefs_browser_summary_on">Full article open inside an app</string>
    <string name="prefs_browser_summary_off">Full article open in default browser</string>
    <string name="source_already_exists">This url is already added</string>
    <string name="nav_all">All news</string>
    <string name="option_favorite">Add to favorites</string>
    <string name="nav_favorite">Favorite</string>
    <string name="dialog_source_title">Modify Channel</string>
    <string name="dialog_source_negative_btn">Delete</string>
    <string name="dialog_source_neutral_btn">Cancel</string>
    <string name="dialog_source_positive_btn">Save</string>
    <string name="il_summary">When images should be loaded</string>
    <string name="il_title">Load images</string>
    <string name="st_summary">How long news will be stored on device</string>
    <string name="pref_st_title">News storage time</string>
    <string name="pref_group_sync_title">Synchronisation settings</string>
    <string name="pref_up_summary">Time period to update news</string>
    <string name="pref_up_title">Update period</string>
    <string name="pref_uwo_summary">Update news only when WiFi is connected</string>
    <string name="pref_uwo_title">Only with WIFI</string>
    <string name="pref_group_interface_title">Interface settings</string>
    <string name="pref_about_summary">About application</string>
    <string name="pref_group_main_title">Main settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_developer">Developed by Artem Korzh</string>
    <string name="about_email">Email:</string>
    <string name="developer_email" translatable="false">artycake.developer@gmail.com</string>
    <string name="app_info">%1$s v %2$s</string>
    <string name="rate_text_before">"Please, "</string>
    <string name="rate_text_rate">rate this app</string>
    <string name="rate_text_after">, recommend to your friends if you like it. Write any suggestions or complaints to email showed above</string>
    <string name="rate_dialog_title">Rate %s</string>
    <string name="rate_dialog_rate">Rate</string>
    <string name="rate_dialog_never">Never</string>
    <string name="rate_dialog_later">Later</string>
    <string name="rate_dialog_message">If you like this app, please rate it. It will take few minutes</string>
    <string name="clear_positive">Clear</string>
    <string name="clear_negative">Cancel</string>
    <string name="pref_clear_title">Clear data</string>
    <string name="pref_clear_summary">Remove all stored channels and articles</string>
    <string name="clear_message">It will remove all stored data. Are you sure you want to continue?</string>
    <string name="no_internet_connetion">No internet connection</string>
</resources>
