<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/source_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_address"
            android:inputType="textUri"
            android:nextFocusDown="@+id/source_name"
            tools:text="https://habrahabr.ru/rss/"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/source_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_name"
            android:nextFocusDown="@+id/source_categories"
            tools:text="Habrahabr"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/source_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/source_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.AppCompatSpinner>
</LinearLayout>